--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,81 @@
-//
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    color: #1B3C59;
+    background-color: #E8EBF1;
+    a {
+        text-decoration: none;
+    }
+    nav {
+        height: 100px;
+        padding: 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: white;
+        img {
+            height: 60px;
+        }
+        ul {
+            list-style: none;
+            li {
+                display: inline-block;
+                padding-right: 50px;
+                a { 
+                    text-transform: uppercase;
+                }
+            }
+        }
+    }
+    main {
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        align-items: center;
+        width: 60%;
+        margin: auto;
+        .student-info {
+            width: calc(100%/2.1);
+            margin: 20px 10px;
+            background-color: white;
+            padding: 20px;
+            border-radius: 3px;
+            .info-top {
+                display: flex;
+                line-height: 30px;
+                img {
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 3px;
+                    margin-right: 15px;
+                    margin-bottom: 15px;
+                }
+            }
+            .info-bot {
+                font-size: 18px;
+                line-height: 23px;
+            }
+        }
+        .student-info-big {
+            width: 100%;
+            margin: 50px 30px;
+            background-color: white;
+            padding: 50px;
+            font-size: 30px;
+            .info-top {
+                display: flex;
+                img {
+                    width: 200px;
+                    height: 200px;
+                    border-radius: 3px;
+                    margin-right: 15px;
+                    margin-bottom: 15px;
+                }
+            }
+        }
+    }
+}
