--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -27,6 +27,7 @@ body {
                 padding-right: 50px;
                 a { 
                     text-transform: uppercase;
+                    color: #1B3C59;
                 }
             }
         }
@@ -44,6 +45,9 @@ body {
             background-color: white;
             padding: 20px;
             border-radius: 3px;
+            a {
+                color: #1e517e;
+            }
             .info-top {
                 display: flex;
                 line-height: 30px;
